<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="camera_temp_file_error">图片错误</string>
    <string name="msg_no_camera">无法启动相机!</string>
    <string name="selector_action_done">完成(%1$d/%2$d)</string>
    <string name="selector_caption">选择图片</string>
    <string name="selector_folder_all">所有图片</string>
    <string name="selector_permission_error">权限错误，无法正常工作！</string>
    <string name="selector_preview">预览</string>
    <string name="selector_reach_max_image_hint">您已经选择%d张图片了!</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="Remove_the_notification">移除通知</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="about_titleBar">关于</string>
    <string name="account_data_titleBar">个人信息</string>
    <string name="account_desc_titleBar">个人简介</string>
    <string name="account_info_titleBar">账号信息</string>
    <string name="account_nickname_titleBar">个人信息</string>
    <string name="account_password_titleBar">修改密码</string>
    <string name="act_default_title">详情</string>
    <string name="act_title">活动详情</string>
    <string name="action_settings">Settings</string>
    <string name="actionbar_title_huati_detail">话题</string>
    <string name="actionbar_title_jianjie_comment">评论</string>
    <string name="actionbar_title_jianjie_detail">行业见解</string>
    <string name="actionbar_title_notice_group">加群申请</string>
    <string name="actionbar_title_wenda_detail">技术答疑</string>
    <string name="add_new_members">新增新成员.</string>
    <string name="again_send_verify">重发验证码</string>
    <string name="again_send_verify_time">重新发送</string>
    <string name="agree">点击下一步代表您已阅读并同意</string>
    <string name="agree_group">同意</string>
    <string name="alert_action_success">操作成功</string>
    <string name="alert_concel">取消</string>
    <string name="alert_data_success">提交成功</string>
    <string name="alert_login">登陆</string>
    <string name="alert_reset_password">密码重置中…</string>
    <string name="alert_submit">正在提交…</string>
    <string name="alert_wait_data_success">请等待数据加载完成</string>
    <string name="app_desc">"绿科邦APP，中国互联网上第一个产业社区，用“群”的精准性、众包性帮助个人和企业解决技术、招聘、营销、合作等实际问题；

并与农业、食品、健康、生物、环保产业多个优秀网站组成协作体，增进上下游行业的对接。"</string>
    <string name="app_name">绿科邦</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_creat_group">创建群组</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_record_has_been_cleared">聊天记录已清空.</string>
    <string name="choose_picture">选择图片</string>
    <string name="comment_count">评论</string>
    <string name="comment_empty">暂无评论</string>
    <string name="confirm_delete_dayi_img">您确认要删除图片么?</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="contacts_titleBar">通讯录</string>
    <string name="copy_message">复制消息</string>
    <string name="copy_success">复制成功</string>
    <string name="creat_group">新建群组</string>
    <string name="create_huati">发表话题</string>
    <string name="create_wenda_title_bar">创建答疑</string>
    <string name="creatgroup_titlebar">创建群组</string>
    <string name="creathuati_titlebar">创建话题</string>
    <string name="dayi_label_hint">添加标签(可选填多个，用空格键生成)</string>
    <string name="define_FloatingActionButton" />
    <string name="delete_conversation_messages">删除该聊天</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_picture">删除图片</string>
    <string name="delete_user_failure">删除用户失败.</string>
    <string name="delete_voice">删除语音</string>
    <string name="desc_detail">提交</string>
    <string name="dialog_clearwords">确定要清除文字吗?</string>
    <string name="dialog_concel">取消</string>
    <string name="dialog_hastel_goto_login">您的手机号码已经注册，可直接登陆</string>
    <string name="dialog_hastel_goto_register">您的手机号码还没注册，请先注册</string>
    <string name="dialog_ok">确定</string>
    <string name="dot">·</string>
    <string name="down_state">正在下载：%s</string>
    <string name="dynamic_item_complete_user_info">您的资料还不够完善,会错过很多优质资源哦!</string>
    <string name="dynamic_item_need_follow">为您推荐更多内容,玩转绿科邦!</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="error_view_avatar_failed">无法保存照片，请检查SD卡是否挂载</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_load_error">"内容加载失败
请您稍后再试"</string>
    <string name="error_view_load_error_click_to_refresh">"内容加载失败
点击重新加载"</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_data">请等待数据加载完成</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_view_no_data">暂时没有内容</string>
    <string name="error_view_upload_failed">无法保存上传的图像，请检查SD卡是否挂载</string>
    <string name="exit_the_group_of_failure">退出群失败.</string>
    <string name="failed_to_get_the_user_list">获取群用户列表失败.</string>
    <string name="fashion_cultivation">时尚种植</string>
    <string name="file">[文件]</string>
    <string name="find_fragment_friend">邀请好友</string>
    <string name="find_fragment_group">发现群组</string>
    <string name="find_fragment_huati">发现话题</string>
    <string name="find_fragment_jianjie">发现行业见解</string>
    <string name="find_fragment_people">发现人</string>
    <string name="find_fragment_wenda">发现技术答疑</string>
    <string name="find_group_titleBar">发现群组</string>
    <string name="find_huati_titleBar">发现话题</string>
    <string name="find_invite_titleBar">邀请好友</string>
    <string name="find_jianjie_titleBar">发现见解</string>
    <string name="find_password">找回密码</string>
    <string name="find_people_titleBar">发现人</string>
    <string name="find_wenda_titleBar">发现技术答疑</string>
    <string name="finish">完成</string>
    <string name="finish_reg">完成注册</string>
    <string name="forget_psd">忘记密码？</string>
    <string name="forward">转发</string>
    <string name="found_new_version">发现新版本:%s</string>
    <string name="frame_find_viewpage_biology">生物</string>
    <string name="hint_enter_password">设置密码</string>
    <string name="hint_enter_the_new_password">新密码</string>
    <string name="hint_password">密码</string>
    <string name="hint_username">手机号或邮箱</string>
    <string name="hint_username_tel_tip">手机号</string>
    <string name="hint_verification_code_tip">验证码</string>
    <string name="lable_all_location">全部地区</string>
    <string name="lable_my_location">当前位置</string>
    <string name="locating">定位中...</string>
    <string name="login">登录</string>
    <string name="main_menu_begin_chat">开始聊天</string>
    <string name="main_menu_chat_post">发表话题</string>
    <string name="main_menu_gourp_detail">查看群组详情</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_share">分享</string>
    <string name="main_menu_user_detail">查看个人详情</string>
    <string name="new_user_reg">新用户注册</string>
    <string name="next_step">下一步</string>
    <string name="register_user_agreement">《用户使用协议》</string>
    <string name="register_username_tel">*请输入您的手机号</string>
    <string name="sure_hint_enter_the_new_password">确认密码</string>
    <string name="tip_please_input_tel">请输入手机号码</string>
    <string name="yes">确定</string>
</resources>