<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/view_actionbar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/space_10" android:paddingTop="@dimen/space_12" android:paddingRight="@dimen/space_10" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:visibility="gone" style="@style/item_input_container">
                <EditText android:id="@id/et_mobile" android:layout_width="210.0dip" android:hint="@string/tip_please_input_tel" style="@style/item_input_edittext" />
                <ImageView android:id="@id/iv_clear_mobile" android:visibility="gone" android:contentDescription="@null" style="@style/item_input_clear" />
            </LinearLayout>
            <LinearLayout android:background="@drawable/edt_all_background" android:layout_marginTop="@dimen/space_9" style="@style/item_input_container">
                <EditText android:id="@id/et_old_psd" android:hint="@string/hint_enter_password" android:maxLength="20" android:inputType="textPassword" style="@style/item_input_edittext" />
                <ImageView android:id="@id/iv_clear_old_psd" android:visibility="gone" android:contentDescription="@null" style="@style/item_input_clear" />
            </LinearLayout>
            <LinearLayout android:background="@drawable/edt_all_background" android:layout_marginTop="@dimen/space_9" style="@style/item_input_container">
                <EditText android:id="@id/et_psd" android:hint="@string/hint_enter_the_new_password" android:maxLength="20" android:inputType="textPassword" style="@style/item_input_edittext" />
                <ImageView android:id="@id/iv_clear_psd" android:visibility="gone" android:contentDescription="@null" style="@style/item_input_clear" />
            </LinearLayout>
            <Button android:id="@id/btn_reset_password" android:layout_marginTop="@dimen/space_12" android:text="@string/yes" style="@style/button_common_green" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>