<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/root" android:background="@drawable/login_bak" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bar_bottom" android:layout_below="@id/top_bar">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_logo" android:layout_width="138.0dip" android:layout_height="168.0dip" android:src="@drawable/lvk_start_icon" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/bar_bottom" android:padding="@dimen/space_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout style="@style/item_input_container">
            <EditText android:id="@id/et_username" android:hint="@string/hint_username" style="@style/item_input_edittext" />
            <ImageView android:id="@id/iv_clear_username" android:visibility="gone" android:contentDescription="@null" style="@style/item_input_clear" />
        </LinearLayout>
        <LinearLayout android:layout_marginTop="@dimen/space_9" style="@style/item_input_container">
            <EditText android:id="@id/et_password" android:hint="@string/hint_password" android:inputType="textPassword" style="@style/item_input_edittext" />
            <ImageView android:id="@id/iv_clear_password" android:visibility="gone" android:contentDescription="@null" style="@style/item_input_clear" />
        </LinearLayout>
        <Button android:id="@id/btn_login" android:layout_marginTop="@dimen/space_16" android:text="@string/login" style="@style/button_common_green" />
        <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/common_link_text_color" android:gravity="right" android:id="@id/tv_forget_password" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/forget_psd" android:layout_centerHorizontal="true" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_14">
            <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/common_link_text_color" android:gravity="center" android:id="@id/tv_regin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip" android:text="@string/new_user_reg" android:layout_centerHorizontal="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_15" android:layout_marginBottom="@dimen/space_15">
            <ImageView android:id="@id/im_login_wechat" android:src="@drawable/login_icon_wechat_selector" style="@style/login_authorize_image" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>