<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/space_20" android:layout_marginRight="@dimen/space_20"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/normal_text_size" android:textColor="@color/main_black" android:gravity="center_vertical" android:background="@drawable/context_menu_item_bg" android:padding="@dimen/space_10" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0px" android:text="@string/copy_message" android:onClick="copy" />
    <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/space_10" android:layout_marginRight="@dimen/space_10" />
    <TextView android:textSize="@dimen/normal_text_size" android:textColor="@color/main_black" android:gravity="center_vertical" android:background="@drawable/context_menu_item_bg" android:padding="@dimen/space_10" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete_message" android:onClick="delete" />
    <TextView android:textSize="@dimen/normal_text_size" android:textColor="@color/main_black" android:gravity="center_vertical" android:background="@drawable/context_menu_item_bg" android:padding="@dimen/space_10" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/forward" android:onClick="forward" />
</LinearLayout>